--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/karla": "^0.2.3",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.5",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
